# oss-ready-check

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: checks.md  release-checklist.md
examples/: sample-report.txt
src/oss_ready_check/: __init__.py  cli.py  formatters.py  rules.py  scanner.py
tests/: test_formatters.py  test_scanner.py
