[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "oss-ready-check"
version = "0.1.0"
description = "A small CLI that checks whether a repository is ready for open-source contribution."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  { name = "OSS Ready Check contributors" }
]
keywords = ["open-source", "github", "cli", "maintainers", "repository", "checklist"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Documentation"
]

[project.urls]
Homepage = "https://github.com/YOUR-USERNAME/oss-ready-check"
Issues = "https://github.com/YOUR-USERNAME/oss-ready-check/issues"

[project.scripts]
oss-ready-check = "oss_ready_check.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
